Scrollbar Fixed

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,18 @@
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--goldVariant2);
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--blackColor);
+}
+
 a {
   text-decoration: none;
 }
